# tauri-plugin-swipe-back-ios

./: Cargo.toml  README.md  build.rs  package.json
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
src/: desktop.rs  lib.rs  mobile.rs
